--- a/ui.html
+++ b/ui.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qwnaVfwI&k=Job&j=oXBP9fwg&__jvst=Employee+Referral&__jvsd=sfOOQgws&__jvsc=Twitter&bid=ncQIWLwW'>Reltio Careers - UI UX Designer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-29</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/teampay/jobs/4362219002'>Job Application for UI/UX Designer at Teampay</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
@@ -72,7 +76,7 @@
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://noodle.applytojob.com/apply/tQAi8F94rj/Lead-Product-Designer-UIUX-Noodlecom'>Lead Product Designer (UI/UX) | Noodle.com - The Noodle Companies - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://noodle.applytojob.com/apply/tQAi8F94rj/Lead-Product-Designer-UIUX-Noodlecom'>Lead Product Designer (UI/UX) | Noodle.com - The Noodle Companies - Career Page</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -80,7 +84,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://Unbxd.recruiterbox.com/jobs/fk03flw'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Unbxd.recruiterbox.com/jobs/fk03flw'>
     UI Developer at Unbxd Inc
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -114,11 +118,11 @@ product requirements with Product Managers, architect and implement technical
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4111189002'>Job Application for Senior UX/UI Designer at SevenRooms</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4111189002'>Job Application for Senior UX/UI Designer at SevenRooms</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4125670002'>Job Application for UI/UX Designer at SevenRooms</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4125670002'>Job Application for UI/UX Designer at SevenRooms</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -134,7 +138,7 @@ product requirements with Product Managers, architect and implement technical
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/199CD66D3A'>Futrli - Jobs: Lead UI Engineer (Belfast) - Apply online</a></h5> 
+<h5><a href='https://futrli.workable.com/j/199CD66D3A'>Futrli - Jobs: Lead UI Engineer (Belfast) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -154,7 +158,7 @@ product requirements with Product Managers, architect and implement technical
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://we-recruit.join.com/jobs/257529-team-leader-engineering-contracting'>Job @ WE RECRUIT (Z?rich): Team Leader Engineering... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/257529-team-leader-engineering-contracting'>Job @ WE RECRUIT (Z?rich): Team Leader Engineering... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -162,7 +166,7 @@ product requirements with Product Managers, architect and implement technical
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/264770-sourcer-recruiter-life-science-recruitment'>Job @ WE RECRUIT (Basel): Sourcer/Recruiter Life S... | JOIN</a></h5> 
+<h5><a href='https://we-recruit.join.com/jobs/264770-sourcer-recruiter-life-science-recruitment'>Job @ WE RECRUIT (Basel): Sourcer/Recruiter Life S... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -170,7 +174,7 @@ product requirements with Product Managers, architect and implement technical
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/274479-recruitment-consultant-headhunter-life-sciences-take-your-shot'>Job @ WE RECRUIT (Basel): Recruitment Consultant/H... | JOIN</a></h5> 
+<h5><a href='https://we-recruit.join.com/jobs/274479-recruitment-consultant-headhunter-life-sciences-take-your-shot'>Job @ WE RECRUIT (Basel): Recruitment Consultant/H... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -196,7 +200,7 @@ product requirements with Product Managers, architect and implement technical
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ah-recruitment.join.com/jobs/268714-verification-manager-m-f-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
+<h5><a href='https://ah-recruitment.join.com/jobs/268714-verification-manager-m-f-d'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -245,7 +249,7 @@ simplify their software testing processes. Our product enables users to test the
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Apply online for the job of UI Developer/ Angular at Zycus.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oOyY9fwd&__jvst=Employee&__jvsd=sm7b5hwv&__jvsc=Twitter&bid=nAgYVLwZ'>Ingram Micro Careers - Manager, UX/UI Design</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oOyY9fwd&__jvst=Employee&__jvsd=sm7b5hwv&__jvsc=Twitter&bid=nAgYVLwZ'>Ingram Micro Careers - Manager, UX/UI Design</a></h5> 
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -356,7 +360,7 @@ involve?...</p>
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/staff-nurse-stead-family-operating-room-90-4352'>Staff Nurse - Stead Family Operating Room 90% - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/staff-nurse-stead-family-operating-room-90-4352'>Staff Nurse - Stead Family Operating Room 90% - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -406,7 +410,7 @@ objectively measure impact and optimize engineering processes; Meeting?...</p>
 <p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351621-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351621-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -414,7 +418,7 @@ objectively measure impact and optimize engineering processes; Meeting?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1767781'>Job Application for Senior UI Developer at Endurance International Group - India</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1767781'>Job Application for Senior UI Developer at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -445,7 +449,7 @@ team. You are an ideal candidate if you have previously worked on parking?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='http://optelgroup.applytojob.com/apply/9myQ285Sv2/Concepteur-UXUI-Designer-UXUI'>Concepteur UX/UI - Designer UX/UI - Optel Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://optelgroup.applytojob.com/apply/9myQ285Sv2/Concepteur-UXUI-Designer-UXUI'>Concepteur UX/UI - Designer UX/UI - Optel Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -458,11 +462,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/3pillarglobal/9630ec28-31ca-4141-86bb-dc5eaa6f59d6'>3Pillar Global - Junior UI Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
